  * Added the ability to encode a hash value within a serialized continuation token. This, along with the compression
    option, have moved to a ContinuationTokenOptions class.
  * Internal refactoring to make code more extendable and testable
  * Renamed AddQueryPaginatorFactory() extension method to AddQueryPagination()


09 Sep 2022
Version 6.0.0-RC.11
======================================================================================================================
AllOverIt
  * Added support for ExcludeWhen() to ObjectMapper
  * Updated ObjectMapper to default to creating empty collections when the source is null (instead of assigning null).
    This can be changed via the default options (PropertyMatcherOptions).
  * Corrected ObjectMapper so it constructs target objects via ConstructUsing() in preference to property mapping

AllOverIt.Pagination
  * Renamed the exposed query provided to the paginator as BaseQuery so it isn't confused with the resultant paginated
    query provided by GetPageQuery(). This base query can be used to get the total page count without having to carry
    it around seperately.

AllOverIt.EntityFrameworkCore.Pagination
  * Added PageResult and IQueryPaginator extension to obtain a page of results and associated information.

AllOverIt.Aws.Cdk.AppSync
  * Renamed cursor related properties to token on AppSync IPageInfo


04 Sep 2022
Version 6.0.0-RC.10
======================================================================================================================
AllOverIt
  * Added ExpressionUtils.GetConstructorWithParametersAsObjects() so 'object' argument types can be used to construct
    other types with constructor arguments
  * Updated TypeFactory to allow object creation based on Type arguments rather than generic types. In summary:
    - TypeFactory<TCreate>.Create() will create a factory for the provided type. Generics or Type args can be used to
      create the required type.