@@ -8,6 +8,33 @@ using System.Security.Cryptography;
 
 namespace AllOverIt.Pagination.TokenEncoding
 {
+
+    /// <summary>Validates a serialized continuation token.</summary>
+    public sealed class ContinuationTokenValidator : IContinuationTokenValidator
+    {
+        private readonly IContinuationTokenSerializerFactory _serializerFactory;
+
+        public ContinuationTokenValidator(IContinuationTokenSerializerFactory serializerFactory)
+        {
+            _serializerFactory = serializerFactory.WhenNotNull(nameof(serializerFactory));
+        }
+
+        /// <inheritdoc />
+        public bool IsValidToken(string continuationToken, IContinuationTokenOptions tokenOptions)
+        {
+            _ = tokenOptions.WhenNotNull(nameof(tokenOptions));
+
+            if (continuationToken.IsNullOrEmpty())
+            {
+                return true;
+            }
+
+            var serializer = _serializerFactory.CreateContinuationTokenSerializer(tokenOptions);
+
+            return serializer.TryDeserialize(continuationToken, out _);
+        }
+    }
+
     internal sealed class ContinuationTokenSerializer : IContinuationTokenSerializer
     {
         private const int HashByteLength = 128 / 8;
@@ -31,14 +58,7 @@ namespace AllOverIt.Pagination.TokenEncoding
                 // decorate the binary streamer with compression
                 _tokenStreamer = new ContinuationTokenCompressor(tokenStreamer);
             }
-        }
-
-        public bool IsValidToken(string continuationToken)
-        {
-            _ = continuationToken.WhenNotNull(nameof(continuationToken));
-
-            return TryDeserialize(continuationToken, out _);
-        }
+        }       
 
         public string Serialize(IContinuationToken continuationToken)
         {
@@ -79,7 +99,7 @@ namespace AllOverIt.Pagination.TokenEncoding
             return token;
         }
 
-        internal bool TryDeserialize(string continuationToken, out IContinuationToken token)
+        public bool TryDeserialize(string continuationToken, out IContinuationToken token)
         {
             _ = continuationToken.WhenNotNull(nameof(continuationToken));
 
