@@ -3,11 +3,6 @@
     /// <summary>Serializes and deserializes <see cref="IContinuationToken"/> instances.</summary>
     public interface IContinuationTokenSerializer
     {
-        /// <summary>Determines if the provided serialized continuation token string is valid.</summary>
-        /// <param name="continuationToken">A serialized continuation token.</param>
-        /// <returns></returns>
-        bool IsValidToken(string continuationToken);
-
         /// <summary>Serializes a <see cref="IContinuationToken"/> to a string.</summary>
         /// <param name="continuationToken">The <see cref="IContinuationToken"/> to serialize.</param>
         /// <returns>The serialized string value for a <see cref="IContinuationToken"/>.</returns>
@@ -17,5 +12,11 @@
         /// <param name="continuationToken">The continuation token string to deserialize.</param>
         /// <returns>The <see cref="IContinuationToken"/> deserialized from a provided string value.</returns>
         IContinuationToken Deserialize(string continuationToken);
+
+        /// <summary>Deserializes a continuation token string to a <see cref="IContinuationToken"/> if it is valid.</summary>
+        /// <param name="continuationToken">A serialized continuation token.</param>
+        /// <param name="token">The deserialized continuation token if it can be decoded.</param>
+        /// <returns>True if the continuation token was deserialized, otherwise false.</returns>
+        bool TryDeserialize(string continuationToken, out IContinuationToken token);
     }
 }
