@@ -2,6 +2,7 @@
 using AllOverIt.Fixture.Extensions;
 using AllOverIt.Fixture.FakeItEasy;
 using AllOverIt.Pagination.TokenEncoding;
+using FakeItEasy;
 using FluentAssertions;
 using System;
 using System.Collections.Generic;
@@ -11,7 +12,29 @@ namespace AllOverIt.Pagination.Tests.TokenEncoding
 {
     public class ContinuationTokenEncoderFactoryFixture : FixtureBase
     {
-        private readonly ContinuationTokenEncoderFactory _continuationTokenEncoderFactory = new();
+        private readonly ContinuationTokenEncoderFactory _continuationTokenEncoderFactory;
+
+        public ContinuationTokenEncoderFactoryFixture()
+        {
+            var serializerFactory = new ContinuationTokenSerializerFactory();
+
+            _continuationTokenEncoderFactory = new(serializerFactory);
+        }
+
+        public class Constructor : ContinuationTokenEncoderFactoryFixture
+        {
+            [Fact]
+            public void Should_Throw_When_Factory_Null()
+            {
+                Invoking(() =>
+                {
+                    _ = new ContinuationTokenEncoderFactory(null);
+                })
+                .Should()
+                .Throw<ArgumentNullException>()
+                .WithNamedMessageWhenNull("serializerFactory");
+            }
+        }
 
         public class CreateContinuationTokenEncoder : ContinuationTokenEncoderFactoryFixture
         {
@@ -32,7 +55,8 @@ namespace AllOverIt.Pagination.Tests.TokenEncoding
             {
                 Invoking(() =>
                 {
-                    _ = _continuationTokenEncoderFactory.CreateContinuationTokenEncoder(new List<IColumnDefinition>(), Create<PaginationDirection>(), Create<ContinuationTokenOptions>());
+                    _ = _continuationTokenEncoderFactory.CreateContinuationTokenEncoder(new List<IColumnDefinition>(), Create<PaginationDirection>(),
+                        Create<ContinuationTokenOptions>());
                 })
                 .Should()
                 .Throw<ArgumentException>()
@@ -54,7 +78,8 @@ namespace AllOverIt.Pagination.Tests.TokenEncoding
             [Fact]
             public void Should_Create_Token_Encoder()
             {
-                var actual = _continuationTokenEncoderFactory.CreateContinuationTokenEncoder(this.CreateManyStubs<IColumnDefinition>(), Create<PaginationDirection>(), Create<ContinuationTokenOptions>());
+                var actual = _continuationTokenEncoderFactory.CreateContinuationTokenEncoder(this.CreateManyStubs<IColumnDefinition>(), Create<PaginationDirection>(),
+                    Create<ContinuationTokenOptions>());
 
                 actual.Should().BeOfType<ContinuationTokenEncoder>();
                 actual.Serializer.Should().BeOfType<ContinuationTokenSerializer>();
