@@ -25,75 +25,6 @@ namespace AllOverIt.Pagination.Tests.TokenEncoding
             }
         }
 
-        public class IsValidToken : ContinuationTokenSerializerFixture
-        {
-            [Fact]
-            public void Should_Throw_When_Token_Null()
-            {
-                Invoking(() =>
-                {
-                    var serializer = new ContinuationTokenSerializer(A.Fake<IContinuationTokenOptions>());
-                    _ = serializer.IsValidToken(null);
-                })
-                    .Should()
-                    .Throw<ArgumentNullException>()
-                    .WithNamedMessageWhenNull("continuationToken");
-            }
-
-            [Fact]
-            public void Should_Return_False_When_Random_String()
-            {
-                var serializer = new ContinuationTokenSerializer(A.Fake<IContinuationTokenOptions>());
-                var actual = serializer.IsValidToken(Create<string>());
-
-                actual.Should().BeFalse();
-            }
-
-            [Fact]
-            public void Should_Return_True_When_Valid_Token()
-            {
-                var continuationToken = new ContinuationToken
-                {
-                    Direction = Create<PaginationDirection>(),
-                    Values = new object[]
-                    {
-                        Create<bool>(),
-                        Create<int>()
-                    }
-                };
-
-                var serializer = new ContinuationTokenSerializer(ContinuationTokenOptions.None);
-
-                var token = serializer.Serialize(continuationToken);
-
-                var actual = serializer.IsValidToken(token);
-
-                actual.Should().BeTrue();
-            }
-
-            [Fact]
-            public void Should_Return_False_When_Invalid_Token()
-            {
-                var continuationToken = new ContinuationToken
-                {
-                    Direction = Create<PaginationDirection>(),
-                    Values = new object[]
-                    {
-                        Create<bool>(),
-                        Create<int>()
-                    }
-                };
-
-                var serializer = new ContinuationTokenSerializer(ContinuationTokenOptions.None);
-
-                var token = serializer.Serialize(continuationToken);
-
-                var actual = serializer.IsValidToken($"12{token}34");
-
-                actual.Should().BeFalse();
-            }
-        }
-
         public class Serialize : ContinuationTokenSerializerFixture
         {
             [Fact]
